--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://bodychick.github.io/Projet12_react",
   "name": "my-app",
   "version": "1.0.1",
   "private": true,
@@ -9,7 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "date-picker-ap2": "^1.0.5",
     "react": "^18.2.0",
-    "react-data-table-component": "^7.5.4",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.0",
@@ -26,8 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.1.1"
   }
 }
